Layout that is terrible but functional

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
       "esnext"
     ],
     "downlevelIteration": true,
-    "allowJs": true,
+    "allowJs": false,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
