--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@types/node": "^16.11.59",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
+    "@types/uuid": "^8.3.4",
     "classnames": "^2.3.2",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.3",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "zustand": "^4.1.1"
   },
