Rework public dir

--- a/bin/build
+++ b/bin/build
@@ -22,7 +22,9 @@ rm -rf dist/**/*
 
 (
   cd server
-  go build -ldflags "-X main.Version=$version -X main.GitHeadSha=$git_head_sha" -o ../dist/bin/server main.go
+  go build \
+    -ldflags "-X main.Version=$version -X main.GitHeadSha=$git_head_sha" \
+    -o ../dist/bin/server main.go
 ) \
   &
 
