--- a/bin/build
+++ b/bin/build
@@ -22,7 +22,7 @@ rm -rf dist/**/*
 
 (
   cd server
-  go build \
+  GOOS=linux GOARCH=amd64 go build \
     -ldflags "-X main.Version=$version -X main.GitHeadSha=$git_head_sha" \
     -o ../dist/bin/server main.go
 ) \
